feat(search): implement boosting logic and priority sorting